examples/errors/argument_argument_collision.aaa
fn
    foo
args
    foo as int
begin
    nop
end


fn
    main
begin
    nop
end
